vendor/meme/src/alphabet.h


typedef enum {Dna, Rna, Protein, Custom} ALPHABET_T;
typedef struct {
  uint64_t references;
  int flags;
  char* alph_name;
  int ncore;
  int nfull;
  char* symbols;
  char** aliases;
  char** names;
  uint32_t* colours;
  uint8_t* ncomprise;
  uint8_t** comprise;
  uint8_t* complement;
  uint8_t encode[UCHAR_MAX + 1];
  uint8_t encode2core[UCHAR_MAX + 1];
  uint8_t encodesafe[UCHAR_MAX + 1];
  uint8_t encodesafe2core[UCHAR_MAX + 1];
} ALPH_T;
typedef struct {
  ALPH_T *src_alph;
  ALPH_T *dest_alph;
  uint8_t src_nsym;
  uint8_t dest_nsym;
  uint32_t *xlate;
} XLATE_T;
typedef struct bgcalc BGCALC_T;
#define ALPH_FLAG_BUILTIN 1
#define ALPH_FLAG_EXTENDS 6
#define ALPH_FLAG_EXTENDS_RNA 2
#define ALPH_FLAG_EXTENDS_DNA 4
#define ALPH_FLAG_EXTENDS_PROTEIN 6
#define ALPH_CASE_INSENSITIVE 8
int alph_sym_cmp(const void *v1, const void *v2);
int alph_str_cmp(const void *v1, const void *v2);
ALPH_T* alph_dna();
ALPH_T* alph_rna();
ALPH_T* alph_protein();
ALPH_T* alph_generic(const char *core_symbols);
ALPH_T* alph_load(const char *filename, bool verbose);
int alph_pick(int nalphs, ALPH_T **alphs, char* symbols, int64_t* counts);
ALPH_T* alph_guess(char* symbols, int64_t* counts);
ALPH_T* alph_hold(ALPH_T *alphabet);
void alph_release(ALPH_T *alphabet);
void alph_print(ALPH_T *alphabet, bool header, FILE *out);
void alph_print_xml(ALPH_T *alphabet, char *tag, char *pad, char *indent, FILE *out);
void alph_print_json(ALPH_T *alph, JSONWR_T* jsonwr);
bool alph_equal(const ALPH_T *a1, const ALPH_T *a2);
int alph_core_subset(const ALPH_T *sub_alph, const ALPH_T *super_alph);
#define alph_extends(alph) (((alph)->flags & ALPH_FLAG_EXTENDS) != 0)
#define alph_extends_rna(alph) (((alph)->flags & ALPH_FLAG_EXTENDS) == ALPH_FLAG_EXTENDS_RNA)
#define alph_extends_dna(alph) (((alph)->flags & ALPH_FLAG_EXTENDS) == ALPH_FLAG_EXTENDS_DNA)
#define alph_extends_protein(alph) (((alph)->flags & ALPH_FLAG_EXTENDS) == ALPH_FLAG_EXTENDS_PROTEIN)
#define alph_is_builtin(alph) (((alph)->flags & ALPH_FLAG_BUILTIN) != 0)
#define alph_is_builtin_rna(alph) (alph_is_builtin(alph) && alph_extends_rna(alph))
#define alph_is_builtin_dna(alph) (alph_is_builtin(alph) && alph_extends_dna(alph))
#define alph_is_builtin_protein(alph) (alph_is_builtin(alph) && alph_extends_protein(alph))
static inline const char* alph_name(const ALPH_T *alph) {
  return (alph != NULL ? alph->alph_name : "undefined");
}
int alph_size_pairs(const ALPH_T *a);
#define alph_size_core(alph) ((alph)->ncore)
#define alph_size_wild(alph) ((alph)->ncore + 1)
#define alph_size_all(alph) ((alph)->nfull - ((alph)->ncomprise[(alph)->nfull] ? 0 : 1))
#define alph_size_ambig(alph) ((alph)->nfull - (alph)->ncore)
#define alph_size_full(alph) ((alph)->nfull)
#define alph_has_complement(alph) ((alph)->ncore > 0 && (alph)->complement[1] != 0)
#define alph_is_case_insensitive(alph) (((alph)->flags & ALPH_CASE_INSENSITIVE) != 0)
#define alph_index(alph, letter) ((alph)->encode[(uint8_t)(letter)] - 1)
#define alph_indexc(alph, letter) ((alph)->encode2core[(uint8_t)(letter)] - 1)
#define alph_encode(alph, letter) ((alph)->encodesafe[(uint8_t)(letter)])
#define alph_encodec(alph, letter) ((alph)->encodesafe2core[(uint8_t)(letter)])
#define alph_wild(alph) ((alph)->ncore)
#define alph_complement(alph, index) ((alph)->complement[(index) + 1] - 1)
#define alph_char(alph, index) ((alph)->symbols[(index) + 1])
static inline bool alph_has_sym_name(ALPH_T *alph, int index) {
  char *name;
  name = alph->names[index + 1];
  return !(name[0] == alph->symbols[index + 1] && name[1] == '\0');
}
#define alph_sym_name(alph, index) ((alph)->names[(index) + 1])
static inline char* alph_xml_id(ALPH_T *alph, int index, STR_T* buffer) {
  char s;
  s = alph->symbols[index + 1];
  str_clear(buffer);
  if ((s >= 'A' && s <= 'Z') || (s >= 'a' && s <= 'z')) {
    str_appendf(buffer, "%c", s);
  } else if (s >= '0' && s <= '9') {
    str_appendf(buffer, "n%c", s);
  } else {
    str_appendf(buffer, "x%2X", (uint8_t)s);
  }
  return str_internal(buffer);
}
#define alph_ncomprise(alph, index) ((alph)->ncomprise[(index) + 1])
#define alph_comprise(alph, index, cindex) ((alph)->comprise[(index) + 1][cindex] - 1)
#define alph_colour(alph, index) ((alph)->colours[(index) + 1])
#define alph_colour_r(alph, index) (((alph)->colours[(index) + 1] >> 16) & 0xFF)
#define alph_colour_g(alph, index) (((alph)->colours[(index) + 1] >> 8) & 0xFF)
#define alph_colour_b(alph, index) ((alph)->colours[(index) + 1] & 0xFF)
#define alph_aliases(alph, index) ((alph)->aliases[(index) + 1])
const char* alph_string(ALPH_T *alph, STR_T *buffer);
#define alph_wildcard(alph) ((alph)->symbols[(alph)->ncore + 1])
#define alph_is_known(alph, letter) ((alph)->encode[(uint8_t)(letter)] != 0)
#define alph_is_concrete(alph, letter) ((alph)->encode2core[(uint8_t)(letter)] != 0)
#define alph_is_core(alph, letter) ((alph)->encode2core[(uint8_t)(letter)] != 0)
#define alph_is_ambiguous(alph, letter) ((alph)->encode[(uint8_t)(letter)] > (alph)->ncore)
#define alph_is_wildcard(alph, letter) ((alph)->encode[(uint8_t)(letter)] == ((alph)->ncore + 1))
bool alph_is_prime(ALPH_T *alph, char letter);
int get_num_ambiguous_letters(ALPH_T *alph, char *string, int length);
bool alph_test(ALPH_T **alpha, int index, char letter);
ALPH_T* alph_type(const char *alphabet, int max);
void calc_ambigs(ALPH_T *alph, bool log_space, ARRAY_T* array);
void average_freq_with_complement(ALPH_T *alph, ARRAY_T *freqs);
ARRAY_T* get_mast_frequencies(ALPH_T *alph, bool has_ambigs, bool translate);
ARRAY_T* get_nrdb_frequencies(ALPH_T *alph, ARRAY_T* freqs);
ARRAY_T* get_uniform_frequencies(ALPH_T *alph, ARRAY_T* freqs);
void normalize_frequencies(ALPH_T *alph, ARRAY_T *freqs, double pseudo);
ARRAY_T* get_file_frequencies(ALPH_T *alph, char *bg_filename);
ARRAY_T* load_markov_model(ALPH_T *alph, int* order, const char *bg_filename);
ARRAY_T* load_markov_model_without_alph(const char *bg_filename, int *order, char **syms);
ARRAY_T* calculate_markov_model(ALPH_T *alph, int order,
    double epsilon, bool join_seq, const char *seq, BGCALC_T** save);
void average_rc_markov_model(ALPH_T *alph, int order, ARRAY_T *bg);
void resize_markov_model(int asize0, int asize1, ARRAY_T *tuples, int *order_p);
typedef enum ambig_calc {
  SUM_FREQS,
  SUM_LOGS,
  AVG_FREQS
} AMBIG_CALC_EN;
void extend_markov_model(ALPH_T* alph, bool wildcard_only, AMBIG_CALC_EN method, ARRAY_T* tuples);
void extrapolate_markov_model(int asize0, int asize1, double ambig_fraction, ARRAY_T* tuples);
double calculate_log_cumulative_background(ALPH_T *alph, bool wildcard_only,
    int order, ARRAY_T *a_cp, const char *seq, LCB_T *logcumback);
ARRAY_T* get_background(ALPH_T *alph, char* bg_filename);
void dist_ambigs(ALPH_T *alph, ARRAY_T* freqs);
void complement_swap_freqs(ALPH_T *alph, ARRAY_T* a1, ARRAY_T* a2);
#define ALPH_NO_ALIASES 1
#define ALPH_NO_AMBIGS 2
#define ALPH_NO_UNKNOWN 4
void translate_seq(ALPH_T *alph, char *sequence, int flags);
void invcomp_seq(ALPH_T *alph, char *sequence, long length);
bool is_palindrome(
  ALPH_T *alph,			
  char *word                    
);
void seq2r(
  ALPH_T *alph,			
  uint8_t *res,			
  char *seq,			
  int len			
);
#define comp_sym(alph, sym) ((alph)->symbols[(alph->complement[(alph)->encode[(uint8_t)(sym)]])])
int* dhash_seq(ALPH_T *alph, XLATE_T *trans,  bool full_alph, char *sequence, long length);
XLATE_T* xlate_dna2protein();
void xlate_destroy(XLATE_T *translator);
void xlate_print(XLATE_T *translator, FILE *out);
#define xlate_src_alph(translator) ((translator)->src_alph)
#define xlate_src_nsyms(translator) ((translator)->src_nsym)
#define xlate_dest_alph(translator) ((translator)->dest_alph)
static inline __attribute__((always_inline)) int xlate_pos(XLATE_T *xlate, bool invcomp, const char *sequence) {
  int i, index;
  ALPH_T *a;
  a = xlate->src_alph;
  if (!invcomp) {
    index = a->encode[(uint8_t)sequence[0]];
    for (i = 1; i < xlate->src_nsym; i++) {
      index = (index * (a->nfull + 1)) + a->encode[(uint8_t)sequence[i]];
    }
  } else {
    index = a->complement[a->encode[(uint8_t)sequence[xlate->src_nsym - 1]]];
    for (i = xlate->src_nsym - 2; i >= 0; i--) {
      index = (index * (a->nfull + 1)) + a->complement[a->encode[(uint8_t)sequence[i]]];
    }
  }
  return index;
}
char *fasta_get_markov(
  int argc,
  char **argv,
  bool tmp_file         
);
ARRAY_T *get_markov_from_sequences(
  char *seqfile,                
  int *order,                   
  double pseudo,                
  ALPH_T *alph,                 
  char *alph_file,              
  ALPHABET_T alphabet_type,     
  bool rc                       
);
#define xlate_index(translator, invcomp, sequence) ((translator)->xlate[xlate_pos(translator, invcomp, sequence)] - 1)
#define xlate_index2(translator, position) ((translator)->xlate[position] - 1)
bool alph_check(ALPH_T *alph, char *syms);